Added final models

--- a/FinalModel.ipynb
+++ b/FinalModel.ipynb
@@ -333,345 +333,8 @@
     "\n",
     "predictions = predictions.sort_values(\"id\").reset_index(drop=True)\n",
     "\n",
-    "predictions.to_csv(\"final_submission_lgbm_improved.csv\", index=False)\n",
-    "print(\"Saved: final_submission_lgbm_improved.csv\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "93336a62",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "TRAIN_PATH = \"train.csv\"\n",
-    "TEST_PATH  = \"test_for_participants.csv\"\n",
-    "OUT_PATH   = \"submission_new_anton.csv\"\n",
-    "\n",
-    "VAL_DAYS = 30\n",
-    "NETLOAD_Q = 0.90\n",
-    "\n",
-    "MODE = \"per_market\"\n",
-    "OBJECTIVE = \"huber\"\n",
-    "\n",
-    "SEED = 42\n",
-    "\n",
-    "def rmse(y_true, y_pred) -> float:\n",
-    "    return float(np.sqrt(mean_squared_error(y_true, y_pred)))\n",
-    "\n",
-    "def add_features(df: pd.DataFrame) -> pd.DataFrame:\n",
-    "    df = df.copy()\n",
-    "\n",
-    "    df[\"delivery_start\"] = pd.to_datetime(df[\"delivery_start\"])\n",
-    "    df[\"delivery_end\"] = pd.to_datetime(df[\"delivery_end\"])\n",
-    "    df[\"market\"] = df[\"market\"].astype(str)\n",
-    "\n",
-    "    dt = df[\"delivery_start\"]\n",
-    "    hour = dt.dt.hour\n",
-    "\n",
-    "    df[\"dayofweek\"] = dt.dt.dayofweek.astype(\"int8\")\n",
-    "    df[\"is_weekend\"] = (df[\"dayofweek\"] >= 5).astype(\"int8\")\n",
-    "    df[\"month\"] = dt.dt.month.astype(\"int8\")\n",
-    "    df[\"dayofyear\"] = dt.dt.dayofyear.astype(\"int16\")\n",
-    "    df[\"weekofyear\"] = dt.dt.isocalendar().week.astype(\"int16\")\n",
-    "\n",
-    "    df[\"hour_sin\"] = np.sin(2 * np.pi * hour / 24.0)\n",
-    "    df[\"hour_cos\"] = np.cos(2 * np.pi * hour / 24.0)\n",
-    "\n",
-    "    df[\"renewables_forecast\"] = df[\"solar_forecast\"] + df[\"wind_forecast\"]\n",
-    "    df[\"net_load_forecast\"] = df[\"load_forecast\"] - df[\"renewables_forecast\"]\n",
-    "\n",
-    "    df[\"netload_x_hour_sin\"] = df[\"net_load_forecast\"] * df[\"hour_sin\"]\n",
-    "    df[\"netload_x_hour_cos\"] = df[\"net_load_forecast\"] * df[\"hour_cos\"]\n",
-    "\n",
-    "    return df\n",
-    "\n",
-    "def sort_ffill_by_market(df: pd.DataFrame, cols: list[str]) -> pd.DataFrame:\n",
-    "    df = df.sort_values([\"market\", \"delivery_start\"]).copy()\n",
-    "    df[cols] = df.groupby(\"market\", sort=False)[cols].ffill()\n",
-    "    return df\n",
-    "\n",
-    "def add_scarcity(df: pd.DataFrame, thr: float) -> pd.DataFrame:\n",
-    "    df = df.copy()\n",
-    "    df[\"scarcity_flag\"] = (df[\"net_load_forecast\"] > thr).astype(\"int8\")\n",
-    "    df[\"net_load_scarcity\"] = df[\"net_load_forecast\"] * df[\"scarcity_flag\"]\n",
-    "    return df\n",
-    "\n",
-    "def build_feature_list(train_df: pd.DataFrame, test_df: pd.DataFrame, include_market: bool) -> list[str]:\n",
-    "    drop = {\"target\", \"delivery_start\", \"delivery_end\"}\n",
-    "    if not include_market:\n",
-    "        drop.add(\"market\")\n",
-    "\n",
-    "    common = [c for c in train_df.columns if c in test_df.columns]\n",
-    "    num_cols = []\n",
-    "    for c in common:\n",
-    "        if c in drop:\n",
-    "            continue\n",
-    "        if pd.api.types.is_numeric_dtype(train_df[c]):\n",
-    "            num_cols.append(c)\n",
-    "\n",
-    "    engineered = [\n",
-    "        \"dayofweek\", \"is_weekend\", \"month\", \"dayofyear\", \"weekofyear\",\n",
-    "        \"hour_sin\", \"hour_cos\",\n",
-    "        \"renewables_forecast\", \"net_load_forecast\",\n",
-    "        \"netload_x_hour_sin\", \"netload_x_hour_cos\",\n",
-    "        \"scarcity_flag\", \"net_load_scarcity\",\n",
-    "    ]\n",
-    "    for c in engineered:\n",
-    "        if c in train_df.columns and c not in num_cols and c not in drop:\n",
-    "            num_cols.append(c)\n",
-    "\n",
-    "    return num_cols\n",
-    "\n",
-    "def make_regressor(objective: str, n_estimators: int = 20000) -> LGBMRegressor:\n",
-    "    return LGBMRegressor(\n",
-    "        objective=objective,\n",
-    "        n_estimators=n_estimators,\n",
-    "        learning_rate=0.02,\n",
-    "        num_leaves=127,\n",
-    "        max_depth=-1,\n",
-    "        min_data_in_leaf=100,\n",
-    "        feature_fraction=0.9,\n",
-    "        bagging_fraction=0.9,\n",
-    "        bagging_freq=1,\n",
-    "        lambda_l2=3.0,\n",
-    "        random_state=SEED,\n",
-    "        n_jobs=-1,\n",
-    "        verbose=-1,\n",
-    "    )\n",
-    "\n",
-    "def run_per_market(train: pd.DataFrame, test: pd.DataFrame):\n",
-    "    markets = sorted(train[\"market\"].unique())\n",
-    "    print(\"Markets:\", markets)\n",
-    "\n",
-    "    preds_test = np.full(len(test), np.nan, dtype=float)\n",
-    "    all_true, all_pred = [], []\n",
-    "\n",
-    "    for m in markets:\n",
-    "        tr_m = train[train[\"market\"] == m].copy()\n",
-    "        te_m = test[test[\"market\"] == m].copy()\n",
-    "        if len(tr_m) < 2000 or len(te_m) == 0:\n",
-    "            print(f\"Market {m} | skipped (train {len(tr_m):,}, test {len(te_m):,})\")\n",
-    "            continue\n",
-    "\n",
-    "        cutoff = tr_m[\"delivery_start\"].max() - pd.Timedelta(days=VAL_DAYS)\n",
-    "        tr = tr_m[tr_m[\"delivery_start\"] < cutoff].copy()\n",
-    "        va = tr_m[tr_m[\"delivery_start\"] >= cutoff].copy()\n",
-    "\n",
-    "        thr = float(tr[\"net_load_forecast\"].quantile(NETLOAD_Q))\n",
-    "        tr = add_scarcity(tr, thr)\n",
-    "        va = add_scarcity(va, thr)\n",
-    "\n",
-    "        feats = build_feature_list(tr, te_m, include_market=False)\n",
-    "\n",
-    "        tr = sort_ffill_by_market(tr, feats)\n",
-    "        va = sort_ffill_by_market(va, feats)\n",
-    "\n",
-    "        reg = make_regressor(OBJECTIVE)\n",
-    "        reg.fit(\n",
-    "            tr[feats], tr[\"target\"].values,\n",
-    "            eval_set=[(va[feats], va[\"target\"].values)],\n",
-    "            eval_metric=\"rmse\",\n",
-    "            callbacks=[lgb.early_stopping(300, verbose=False)],\n",
-    "        )\n",
-    "\n",
-    "        pred_va = reg.predict(va[feats])\n",
-    "        score = rmse(va[\"target\"].values, pred_va)\n",
-    "        best_it = int(getattr(reg, \"best_iteration_\", reg.n_estimators))\n",
-    "\n",
-    "        print(f\"Market {m} | RMSE {score:8.3f} | val rows {len(va):,} | best_iter {best_it:,} | netload_thr(q{NETLOAD_Q:.2f}) {thr:,.0f}\")\n",
-    "\n",
-    "        all_true.append(va[\"target\"].values)\n",
-    "        all_pred.append(pred_va)\n",
-    "\n",
-    "        thr_full = float(tr_m[\"net_load_forecast\"].quantile(NETLOAD_Q))\n",
-    "        tr_full = add_scarcity(tr_m, thr_full)\n",
-    "\n",
-    "        te_full = add_scarcity(te_m, thr_full)\n",
-    "\n",
-    "        feats_full = build_feature_list(tr_full, te_full, include_market=False)\n",
-    "        tr_full = sort_ffill_by_market(tr_full, feats_full)\n",
-    "        te_full = sort_ffill_by_market(te_full, feats_full)\n",
-    "\n",
-    "        reg_final = make_regressor(OBJECTIVE, n_estimators=best_it)\n",
-    "        reg_final.fit(tr_full[feats_full], tr_full[\"target\"].values)\n",
-    "\n",
-    "        pred_test_m = reg_final.predict(te_full[feats_full])\n",
-    "        preds_test[test[\"market\"] == m] = pred_test_m\n",
-    "\n",
-    "    if all_pred:\n",
-    "        y_true = np.concatenate(all_true)\n",
-    "        y_pred = np.concatenate(all_pred)\n",
-    "        print(\"\\nOverall validation RMSE:\", f\"{rmse(y_true, y_pred):.4f}\")\n",
-    "\n",
-    "    return preds_test\n",
-    "\n",
-    "def run_global(train: pd.DataFrame, test: pd.DataFrame):\n",
-    "    train = train.copy()\n",
-    "    test = test.copy()\n",
-    "\n",
-    "    cutoff = train[\"delivery_start\"].max() - pd.Timedelta(days=VAL_DAYS)\n",
-    "    tr = train[train[\"delivery_start\"] < cutoff].copy()\n",
-    "    va = train[train[\"delivery_start\"] >= cutoff].copy()\n",
-    "\n",
-    "    thr_by_market = tr.groupby(\"market\")[\"net_load_forecast\"].quantile(NETLOAD_Q).to_dict()\n",
-    "\n",
-    "    def apply_thr(df: pd.DataFrame) -> pd.DataFrame:\n",
-    "        df = df.copy()\n",
-    "        df[\"thr\"] = df[\"market\"].map(thr_by_market).astype(float)\n",
-    "        df[\"scarcity_flag\"] = (df[\"net_load_forecast\"] > df[\"thr\"]).astype(\"int8\")\n",
-    "        df[\"net_load_scarcity\"] = df[\"net_load_forecast\"] * df[\"scarcity_flag\"]\n",
-    "        df.drop(columns=[\"thr\"], inplace=True)\n",
-    "        return df\n",
-    "\n",
-    "    tr = apply_thr(tr)\n",
-    "    va = apply_thr(va)\n",
-    "    test2 = apply_thr(test)\n",
-    "\n",
-    "    tr[\"market\"] = tr[\"market\"].astype(\"category\")\n",
-    "    va[\"market\"] = va[\"market\"].astype(\"category\")\n",
-    "    test2[\"market\"] = test2[\"market\"].astype(\"category\")\n",
-    "\n",
-    "    feats = build_feature_list(tr, test2, include_market=True)\n",
-    "    feats_ffill = [c for c in feats if c != \"market\"]\n",
-    "    tr = sort_ffill_by_market(tr, feats_ffill)\n",
-    "    va = sort_ffill_by_market(va, feats_ffill)\n",
-    "    test2 = sort_ffill_by_market(test2, feats_ffill)\n",
-    "\n",
-    "    reg = make_regressor(OBJECTIVE)\n",
-    "    reg.fit(\n",
-    "        tr[feats], tr[\"target\"].values,\n",
-    "        eval_set=[(va[feats], va[\"target\"].values)],\n",
-    "        eval_metric=\"rmse\",\n",
-    "        categorical_feature=[\"market\"],\n",
-    "        callbacks=[lgb.early_stopping(300, verbose=False)],\n",
-    "    )\n",
-    "\n",
-    "    pred_va = reg.predict(va[feats])\n",
-    "    print(\"Overall validation RMSE:\", f\"{rmse(va['target'].values, pred_va):.4f}\")\n",
-    "\n",
-    "    for m in sorted(train[\"market\"].unique()):\n",
-    "        mask = va[\"market\"].astype(str) == m\n",
-    "        if mask.sum() == 0:\n",
-    "            continue\n",
-    "        print(f\"Market {m} | RMSE {rmse(va.loc[mask,'target'].values, pred_va[mask]):8.3f} | val rows {mask.sum():,}\")\n",
-    "\n",
-    "    best_it = int(getattr(reg, \"best_iteration_\", reg.n_estimators))\n",
-    "\n",
-    "    train_full = train.copy()\n",
-    "    thr_full = train_full.groupby(\"market\")[\"net_load_forecast\"].quantile(NETLOAD_Q).to_dict()\n",
-    "\n",
-    "    def apply_thr_full(df: pd.DataFrame) -> pd.DataFrame:\n",
-    "        df = df.copy()\n",
-    "        df[\"thr\"] = df[\"market\"].map(thr_full).astype(float)\n",
-    "        df[\"scarcity_flag\"] = (df[\"net_load_forecast\"] > df[\"thr\"]).astype(\"int8\")\n",
-    "        df[\"net_load_scarcity\"] = df[\"net_load_forecast\"] * df[\"scarcity_flag\"]\n",
-    "        df.drop(columns=[\"thr\"], inplace=True)\n",
-    "        return df\n",
-    "\n",
-    "    train_full = apply_thr_full(train_full)\n",
-    "    test_full = apply_thr_full(test.copy())\n",
-    "\n",
-    "    train_full[\"market\"] = train_full[\"market\"].astype(\"category\")\n",
-    "    test_full[\"market\"] = test_full[\"market\"].astype(\"category\")\n",
-    "\n",
-    "    feats_full = build_feature_list(train_full, test_full, include_market=True)\n",
-    "    feats_ffill_full = [c for c in feats_full if c != \"market\"]\n",
-    "    train_full = sort_ffill_by_market(train_full, feats_ffill_full)\n",
-    "    test_full = sort_ffill_by_market(test_full, feats_ffill_full)\n",
-    "\n",
-    "    reg_final = make_regressor(OBJECTIVE, n_estimators=best_it)\n",
-    "    reg_final.fit(\n",
-    "        train_full[feats_full], train_full[\"target\"].values,\n",
-    "        categorical_feature=[\"market\"],\n",
-    "    )\n",
-    "\n",
-    "    return reg_final.predict(test_full[feats_full])\n",
-    "\n",
-    "def main():\n",
-    "    train = pd.read_csv(TRAIN_PATH)\n",
-    "    test = pd.read_csv(TEST_PATH)\n",
-    "\n",
-    "    train = add_features(train)\n",
-    "    test = add_features(test)\n",
-    "\n",
-    "    if MODE == \"per_market\":\n",
-    "        preds = run_per_market(train, test)\n",
-    "    elif MODE == \"global\":\n",
-    "        preds = run_global(train, test)\n",
-    "    else:\n",
-    "        raise ValueError(\"MODE must be 'per_market' or 'global'\")\n",
-    "\n",
-    "    if np.isnan(preds).any():\n",
-    "        missing = int(np.isnan(preds).sum())\n",
-    "        raise RuntimeError(f\"{missing} test predictions are NaN (likely a market mismatch).\")\n",
-    "\n",
-    "    sub = pd.DataFrame({\"id\": test[\"id\"].values, \"target\": preds})\n",
-    "    sub.to_csv(OUT_PATH, index=False)\n",
-    "    print(f\"\\nWrote: {OUT_PATH} | rows: {len(sub):,}\")\n",
-    "\n",
-    "if __name__ == \"__main__\":\n",
-    "    main()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "291a8a2a",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "print(\"Loading submission files and test map...\")\n",
-    "\n",
-    "sub_market_a = pd.read_csv(\"final_submission_lgbm_improved.csv\")\n",
-    "sub_rest     = pd.read_csv(\"submission_new_anton.csv\")\n",
-    "test_df      = pd.read_csv(\"test_for_participants.csv\")\n",
-    "\n",
-    "required_cols = {\"id\", \"market\"}\n",
-    "assert required_cols.issubset(test_df.columns), f\"test_df must contain {required_cols}\"\n",
-    "assert {\"id\", \"target\"}.issubset(sub_market_a.columns)\n",
-    "assert {\"id\", \"target\"}.issubset(sub_rest.columns)\n",
-    "\n",
-    "test_ids = pd.to_numeric(test_df[\"id\"], errors=\"raise\").astype(\"int64\")\n",
-    "test_markets = test_df[\"market\"]\n",
-    "\n",
-    "subA = sub_market_a.copy()\n",
-    "subB = sub_rest.copy()\n",
-    "subA[\"id\"] = pd.to_numeric(subA[\"id\"], errors=\"raise\").astype(\"int64\")\n",
-    "subB[\"id\"] = pd.to_numeric(subB[\"id\"], errors=\"raise\").astype(\"int64\")\n",
-    "\n",
-    "subA = subA.set_index(\"id\")[[\"target\"]]\n",
-    "subB = subB.set_index(\"id\")[[\"target\"]]\n",
-    "\n",
-    "assert test_ids.is_unique, \"Duplicate IDs in test file\"\n",
-    "\n",
-    "A_missing = set(test_ids) - set(subA.index)\n",
-    "B_missing = set(test_ids) - set(subB.index)\n",
-    "assert len(A_missing) == 0, f\"sub_market_a missing {len(A_missing)} test IDs\"\n",
-    "assert len(B_missing) == 0, f\"sub_rest missing {len(B_missing)} test IDs\"\n",
-    "\n",
-    "TARGET_MARKET_VALUE = \"Market A\"\n",
-    "\n",
-    "mask = (test_markets == TARGET_MARKET_VALUE).to_numpy()\n",
-    "\n",
-    "targets_A = subA.loc[test_ids, \"target\"].to_numpy()\n",
-    "targets_B = subB.loc[test_ids, \"target\"].to_numpy()\n",
-    "\n",
-    "stitched_sub = pd.DataFrame({\n",
-    "    \"id\": test_ids.to_numpy(),\n",
-    "    \"target\": np.where(mask, targets_A, targets_B).astype(np.float32)\n",
-    "})\n",
-    "\n",
-    "assert list(stitched_sub.columns) == [\"id\", \"target\"]\n",
-    "assert len(stitched_sub) == len(test_df)\n",
-    "assert stitched_sub[\"id\"].is_unique\n",
-    "assert stitched_sub[\"target\"].notna().all()\n",
-    "assert np.isfinite(stitched_sub[\"target\"]).all()\n",
-    "\n",
-    "stitched_sub = stitched_sub.sort_values(\"id\").reset_index(drop=True)\n",
-    "\n",
-    "stitched_sub.to_csv(\"aey_trading_submission.csv\", index=False)\n",
-    "print(\"Success! Saved to 'final_stitched_submission.csv'.\")"
+    "predictions.to_csv(\"aey__trading_submission.csv\", index=False)\n",
+    "print(\"Saved: aey__trading_submission.csv\")"
    ]
   }
  ],
